--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -256,6 +256,11 @@ source:
     - make
   instructions: |
     {{ self.install_dependencies() }}
+    {% if self.license_base64 is defined and self.license_base64|length %}
+    echo "   fs license (base64):      "{{ self.license_base64 }}
+    mkdir -p {{ self.license_path }}
+    echo {{ self.license_base64 }} | base64 -d > {{ self.license_path }}/{{ self.license_file }}
+    {% endif %}
     # git config
     # -------------------------------------------------------------------------
     git config --global user.email "CI@example.com"
@@ -295,11 +300,6 @@ source:
     # ----------------------------------------------------------------
     mkdir -p {{ self.pkg_path }}
     mkdir -p {{ self.install_path }}
-    {%- if self.license_base64 is defined and self.license_base64|length %}
-    echo "   fs license (base64):      "{{ self.license_base64 }}
-    mkdir -p {{ self.license_path }}
-    echo {{ self.license_base64 }} | base64 -d > {{ self.license_path }}/{{ self.license_file }}
-    {% endif %}
     wget -q -c {{ self.pkg_url }} -O - | tar -xz -C {{ self.pkg_path }}
     mv {{ self.pkg_path }}/packages/* {{ self.pkg_path }}
     rm -rf {{ self.pkg_path }}/packages
