[WIP] syntax tweak to support commit param

--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -314,7 +314,7 @@ source:
     {%- if self.commit is defined and self.commit|length %}
     cd {{ self.source_path }}
     git checkout {{ self.commit }}
-    {% endif %}
+    {% endif -%}
     cd {{ self.install_path }}
     cmake {{ self.cmake_opts }} {{ self.source_path }}
     make {{ self.make_opts }}
