disable rPkgsInstall for now

--- a/neurodocker/templates/afni.yaml
+++ b/neurodocker/templates/afni.yaml
@@ -73,7 +73,7 @@ binaries:
       {% elif self.pkg_manager == "yum" %}
       {{ self.install(["R-devel"]) }}
       {% endif -%}
-    rPkgsInstall -pkgs ALL
+    # rPkgsInstall -pkgs ALL
     {% endif -%}
 
 source:
