--- a/neurodocker/templates/afni.yaml
+++ b/neurodocker/templates/afni.yaml
@@ -74,7 +74,7 @@ binaries:
       {% elif self.pkg_manager == "yum" %}
       {{ self.install(["R-devel"]) }}
       {% endif -%}
-    echo "rPkgsInstall -pkgs ALL"
+    rPkgsInstall -pkgs ALL
     {% endif -%}
 
 source:
