--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ docs =
     sphinx >= 3.4
     pydata-sphinx-theme
     sphinxcontrib.apidoc >= 0.3
+    sphinx-click
 all =
     %(minify)s
     %(dev)s
