fix path to include cli/minify/_trace.sh

--- a/setup.cfg
+++ b/setup.cfg
@@ -63,7 +63,7 @@ console_scripts =
 neurodocker =
     templates/*.yaml
     reproenv/schemas/*.json
-    reprozip/_trace.sh
+    cli/minify/_trace.sh
 
 [versioneer]
 VCS = git
