add long_description to setup.cfg
This will hopefully render the readme in pypi on next release.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,8 @@ url = https://github.com/repronim/neurodocker
 author = Neurodocker Developers
 author_email = jakub.kaczmarzyk@gmail.com
 description = A generic generator of Dockerfiles and Singularity recipes
+long_description = file: README.md
+long_description_content_type = text/markdown
 license = Apache License, 2.0
 classifiers =
     Development Status :: 4 - Beta
