--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ classifiers =
 packages = find:
 python_requires = >= 3.7
 install_requires =
-    click >= 7.0, <8.0
+    click >= 8.1.3
     etelemetry >= 0.2.0
     jinja2 >= 2.0
     jsonschema >= 3.0
@@ -37,7 +37,7 @@ minify =
     docker >= 4.4.1
 dev =
     %(minify)s
-    black <= 21.12b0
+    black >= 22.6.0
     codecov
     flake8
     mypy == 0.790
