update black version in setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ minify =
     docker >= 4.4.1
 dev =
     %(minify)s
-    black <= 21.12b0
+    black >= 22.12.0
     codecov
     flake8
     mypy == 0.790
