--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,3 +12,9 @@ repos:
     rev: "22.12.0"
     hooks:
     -   id: black
+
+-   repo: https://github.com/pycqa/flake8
+    rev: "6.0.0"
+    hooks:
+        - id: flake8
+          exclude: tests_.*.py|version.*.py|setup.py # ignore tests and versioneer related code
