--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,3 +17,12 @@ repos:
     rev: "6.0.0"
     hooks:
         - id: flake8
+
+
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v0.991"
+    hooks:
+      - id: mypy
+        additional_dependencies: [types-all]
+        files: neurodocker
+        args: ["--config-file", "setup.cfg"]
