--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -14,5 +14,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: "3.10"
+
+    - name: Install neurodocker
+      run: python -m pip install --editable .[dev]
+
+    - name: version
+      run: neurodocker --version
+
     - name: Build the Docker image
       run: docker build .
