--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        base_image: ["fedora:36", "ubuntu:22.04", "ubuntu:18.04", "ubuntu:16.04", "centos:8"]
+        base_image: ["fedora:36", "centos:8", "ubuntu:22.04", "ubuntu:18.04", "ubuntu:16.04"]
 
     steps:
     - uses: actions/checkout@v3
@@ -29,12 +29,22 @@ jobs:
     - name: Install neurodocker
       run: python -m pip install --editable .[dev]
 
-    - name: Generate Dockerfile
+    - name: Generate Dockerfile apt
+      if: contains( ["ubuntu:22.04", "ubuntu:18.04", "ubuntu:16.04"], ${{ matrix.base_image }} )
       run: |
         neurodocker \
           generate docker \
           --base-image=${{ matrix.base_image }} \
           --pkg-manager=apt \
+          --freesurfer version=7.3.1 > Dockerfile_tmp
+
+    - name: Generate Dockerfile yum
+      if: contains( ["fedora:36", "centos:8"], ${{ matrix.base_image }} )
+      run: |
+        neurodocker \
+          generate docker \
+          --base-image=${{ matrix.base_image }} \
+          --pkg-manager=yum \
           --freesurfer version=7.3.1 > Dockerfile_tmp
 
     - name: Build the Docker image
