--- a/.github/workflows/afni.yml
+++ b/.github/workflows/afni.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'centos:8', 'fedora:36']
-        
+        method: ['binaries']
 
     steps:
       - uses: actions/checkout@v3
@@ -49,7 +49,9 @@ jobs:
             generate docker \
             --base-image=${{ matrix.base_image }} \
             --pkg-manager=${pkg_manager} \
-            --afni   > Dockerfile_tmp
+            --afni \
+            method=${{ matrix.method }} \
+            > Dockerfile_tmp
 
       - name: Build the Docker image
         run: docker build -f Dockerfile_tmp .
