--- a/.github/workflows/freesurfer.yml
+++ b/.github/workflows/freesurfer.yml
@@ -1,3 +1,4 @@
+# This is file is automatically generated. Do not edit.
 name: freesurfer
 
 on:
@@ -15,15 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        base_image:
-          [
-            "fedora:36",
-            "centos:8",
-            "ubuntu:22.04",
-            "ubuntu:18.04",
-            "ubuntu:16.04",
-          ]
-        version: ["7.3.1", "6.0.0"]
+        base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'centos:8', 'fedora:36']
+        version: ['7.3.1', '6.0.0']
 
     steps:
       - uses: actions/checkout@v3
@@ -39,23 +33,23 @@ jobs:
       - name: Generate Dockerfile
         run: |
 
-          apt_based=("ubuntu:22.04", "ubuntu:18.04", "ubuntu:16.04")
+          apt_based=('ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04')
           if [[ " ${apt_based[*]} " =~ ${{ matrix.base_image }} ]]; then
             pkg_manager="apt"
           fi
 
-          yum_based=("fedora:36", "centos:8")
+          yum_based=('centos:8', 'fedora:36')
           if [[ " ${yum_based[*]} " =~ ${{ matrix.base_image }} ]]; then
             pkg_manager="yum"
           fi
-
-          echo "pkg_manager will b:  ${pkg_manager}"
-
+          
           neurodocker \
             generate docker \
             --base-image=${{ matrix.base_image }} \
             --pkg-manager=${pkg_manager} \
-            --freesurfer version=${{ matrix.version }} > Dockerfile_tmp
+            --freesurfer \
+            version=${{ matrix.version }} \
+            > Dockerfile_tmp
 
       - name: Build the Docker image
         run: docker build -f Dockerfile_tmp .
