--- a/.github/workflows/spm12.yml
+++ b/.github/workflows/spm12.yml
@@ -1,5 +1,5 @@
 # This is file is automatically generated. Do not edit.
-name: afni
+name: spm12
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
 
 jobs:
 
-  afni:
+  spm12:
 
     runs-on: ubuntu-latest
 
@@ -17,7 +17,8 @@ jobs:
       fail-fast: false
       matrix:
         base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'centos:8', 'fedora:36']
-        method: ['binaries', 'source']
+        version: ['r7771', 'r6225']
+        method: ['binaries']
 
     steps:
       - uses: actions/checkout@v3
@@ -47,7 +48,8 @@ jobs:
             generate docker \
             --base-image=${{ matrix.base_image }} \
             --pkg-manager=${pkg_manager} \
-            --afni \
+            --spm12 \
+            version=${{ matrix.version }} \
             method=${{ matrix.method }} \
             > Dockerfile_tmp
 
