--- a/.github/workflows/freesurfer.yml
+++ b/.github/workflows/freesurfer.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'centos:8', 'fedora:36']
+        base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'fedora:36']
         version: ['7.3.1', '6.0.0']
 
     steps:
@@ -38,11 +38,11 @@ jobs:
             pkg_manager="apt"
           fi
 
-          yum_based=('centos:8', 'fedora:36')
+          yum_based=('fedora:36')
           if [[ " ${yum_based[*]} " =~ ${{ matrix.base_image }} ]]; then
             pkg_manager="yum"
           fi
-          
+
           neurodocker \
             generate docker \
             --base-image=${{ matrix.base_image }} \
@@ -50,6 +50,8 @@ jobs:
             --freesurfer \
             version=${{ matrix.version }} \
             > Dockerfile_tmp
+
+          cat Dockerfile_tmp
 
       - name: Build the Docker image
         run: docker build -f Dockerfile_tmp .
