--- a/.github/workflows/spm12.yml
+++ b/.github/workflows/spm12.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'fedora:36']
+        base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'bullseye-20221219-slim', 'buster-20221219-slim', 'stretch-slim', 'fedora:36', 'centos:8', 'centos:7']
         version: ['r7771', 'r6225']
         method: ['binaries']
 
@@ -34,12 +34,12 @@ jobs:
       - name: Generate Dockerfile
         run: |
 
-          apt_based=('ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04')
+          apt_based=('ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'bullseye-20221219-slim', 'buster-20221219-slim', 'stretch-slim')
           if [[ " ${apt_based[*]} " =~ ${{ matrix.base_image }} ]]; then
             pkg_manager="apt"
           fi
 
-          yum_based=('fedora:36')
+          yum_based=('fedora:36', 'centos:8', 'centos:7')
           if [[ " ${yum_based[*]} " =~ ${{ matrix.base_image }} ]]; then
             pkg_manager="yum"
           fi
