--- a/.github/workflows/freesurfer.yml
+++ b/.github/workflows/freesurfer.yml
@@ -16,8 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'bullseye-20221219-slim', 'buster-20221219-slim', 'stretch-slim', 'fedora:36', 'centos:8', 'centos:7']
-        version: ['7.3.1', '6.0.0']
+        base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'debian:bullseye-20221219-slim', 'debian:buster-20221219-slim', 'stretch-slim', 'fedora:36', 'centos:8', 'centos:7']
+        version: ['7.3.1', '7.2.0', '7.1.0', '6.0.0']
 
     steps:
       - uses: actions/checkout@v3
@@ -33,7 +33,7 @@ jobs:
       - name: Generate Dockerfile
         run: |
 
-          apt_based=('ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'bullseye-20221219-slim', 'buster-20221219-slim', 'stretch-slim')
+          apt_based=('ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'debian:bullseye-20221219-slim', 'debian:buster-20221219-slim', 'stretch-slim')
           if [[ " ${apt_based[*]} " =~ ${{ matrix.base_image }} ]]; then
             pkg_manager="apt"
           fi
