--- a/.github/workflows/afni.yml
+++ b/.github/workflows/afni.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches: ["*"]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
 
   afni:
@@ -18,6 +22,8 @@ jobs:
       matrix:
         base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'debian:bullseye-slim', 'debian:buster-slim', 'debian:stretch-slim', 'fedora:36', 'centos:7']
         method: ['binaries', 'source']
+        afni_python: ['true', 'false']
+        
 
     steps:
       - uses: actions/checkout@v3
@@ -50,6 +56,7 @@ jobs:
             --yes \
             --afni \
             method=${{ matrix.method }} \
+            install_python3=${{ matrix.afni_python }} \
             > Dockerfile_tmp
 
           cat Dockerfile_tmp
