--- a/.github/workflows/ants.yml
+++ b/.github/workflows/ants.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches: ["*"]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
 
   ants:
@@ -19,6 +23,7 @@ jobs:
         base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'debian:bullseye-slim', 'debian:buster-slim', 'debian:stretch-slim', 'fedora:36', 'centos:7']
         version: ['2.3.4', '2.2.0', '2.0.0']
         method: ['binaries', 'source']
+        
 
     steps:
       - uses: actions/checkout@v3
