--- a/.github/workflows/freesurfer.yml
+++ b/.github/workflows/freesurfer.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches: ["*"]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
 
   freesurfer:
@@ -18,6 +22,7 @@ jobs:
       matrix:
         base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'debian:bullseye-slim', 'debian:buster-slim', 'debian:stretch-slim', 'fedora:36', 'centos:7']
         version: ['7.3.1', '7.2.0', '7.1.0', '6.0.0']
+        
 
     steps:
       - uses: actions/checkout@v3
