--- a/.github/workflows/mrtrix3.yml
+++ b/.github/workflows/mrtrix3.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches: ["*"]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
 
   mrtrix3:
@@ -19,6 +23,7 @@ jobs:
         base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'debian:bullseye-slim', 'debian:buster-slim', 'debian:stretch-slim', 'fedora:36', 'centos:7']
         version: ['3.0.2', '3.0.1', '3.0.0']
         method: ['binaries', 'source']
+        
 
     steps:
       - uses: actions/checkout@v3
