--- a/.github/workflows/spm12.yml
+++ b/.github/workflows/spm12.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches: ["*"]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
 
   spm12:
@@ -19,6 +23,7 @@ jobs:
         base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'debian:bullseye-slim', 'debian:buster-slim', 'debian:stretch-slim', 'fedora:36', 'centos:7']
         version: ['r7771', 'r6914', 'r6225']
         method: ['binaries']
+        
 
     steps:
       - uses: actions/checkout@v3
