update to mcr base version and ants mcr dependency version

--- a/.github/workflows/matlabmcr.yml
+++ b/.github/workflows/matlabmcr.yml
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'debian:bullseye-slim', 'debian:buster-slim', 'debian:stretch-slim', 'fedora:36', 'centos:7']
-        version: ['2021b', '2015a', '2010a']
+        version: ['2021b', '2015a', '2012a', '2010a']
         method: ['binaries']
         
 
