--- a/neurodocker/templates/afni.yaml
+++ b/neurodocker/templates/afni.yaml
@@ -70,7 +70,7 @@ binaries:
   instructions: |
     {{ self.install_dependencies() }}
     {% if self.install_python3.lower() in ["true", "1", "y"] -%}
-    {{ self.install(["python3"]) }}
+    {{ self.install(["python3"]) -}}
     pip3 install matplotlib
     {%- endif %}
     gsl_path="$(find / -name 'libgsl.so.??' || printf '')"
