--- a/.github/workflows/afni.yml
+++ b/.github/workflows/afni.yml
@@ -21,9 +21,9 @@ jobs:
       fail-fast: false
       matrix:
         base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'debian:bullseye-slim', 'debian:buster-slim', 'debian:stretch-slim', 'fedora:36', 'centos:7']
+        version: ['latest']
         method: ['binaries', 'source']
         afni_python: ['true', 'false']
-
 
     steps:
       - uses: actions/checkout@v3
@@ -55,6 +55,7 @@ jobs:
             --pkg-manager=${pkg_manager} \
             --yes \
             --afni \
+            version=${{ matrix.version }} \
             method=${{ matrix.method }} \
             install_python3=${{ matrix.afni_python }} \
             > Dockerfile_tmp
