--- a/.github/workflows/freesurfer.yml
+++ b/.github/workflows/freesurfer.yml
@@ -21,8 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'debian:bullseye-slim', 'debian:buster-slim', 'debian:stretch-slim', 'fedora:36', 'centos:7']
-        version: ['7.3.1', '7.2.0', '7.1.0', '6.0.0']
-
+        version: ['7.3.1', '7.3.0', '7.2.0', '7.1.1', '7.1.1-min', '7.1.0', '6.0.1', '6.0.0', '6.0.0-min']
 
     steps:
       - uses: actions/checkout@v3
