--- a/.github/workflows/fsl.yml
+++ b/.github/workflows/fsl.yml
@@ -21,9 +21,8 @@ jobs:
       fail-fast: false
       matrix:
         base_image: ['ubuntu:22.04', 'ubuntu:18.04', 'ubuntu:16.04', 'debian:bullseye-slim', 'debian:buster-slim', 'debian:stretch-slim', 'fedora:36', 'centos:7']
-        version: ['6.0.5.1', '6.0.4', '6.0.3', '6.0.2', '6.0.1', '6.0.0', '5.0.10']
+        version: ['6.0.5.1', '6.0.5', '6.0.4', '6.0.3', '6.0.2', '6.0.1', '6.0.0', '5.0.11', '5.0.10', '5.0.9', '5.0.8']
         method: ['binaries']
-
 
     steps:
       - uses: actions/checkout@v3
