fix: mypy configuration

--- a/setup.cfg
+++ b/setup.cfg
@@ -79,7 +79,7 @@ extend-ignore = E203
 exclude = neurodocker/_version.py
 
 [mypy]
-exclude = ['reproenv/tests/']
+exclude = reproenv/tests
 no_implicit_optional=False
 
 [mypy-neurodocker._version]
