--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -8,31 +8,40 @@ on:
 
 jobs:
   run-tests:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
-        python-version: ['3.10', '3.9', '3.8', '3.7']
+        python-version: ['3.11', '3.10', '3.9', '3.8']
     steps:
-      - name: Install Singularity
+      - name: Install Apptainer
+        env:
+          VERSION=1.1.5
         run: |
           sudo apt-get update
-          sudo apt-get install --yes \
-            libssl-dev \
-            uuid-dev \
-            libgpgme11-dev \
-            squashfs-tools
-          curl -fsSL https://github.com/hpcng/singularity/releases/download/v3.6.4/singularity-3.6.4.tar.gz | tar xz
-          cd singularity
-          ./mconfig -p $HOME/opt/singularity
-          cd builddir
-          make
-          sudo make install
-      - name: Set Singularity environment variables
+          sudo apt-get update && apt-get install -y \
+              build-essential \
+              libseccomp-dev \
+              pkg-config \
+              uidmap \
+              squashfs-tools \
+              squashfuse \
+              fuse2fs \
+              fuse-overlayfs \
+              fakeroot \
+              cryptsetup \
+              curl wget git
+          wget -q https://github.com/apptainer/apptainer/releases/download/v${VERSION}/apptainer-${VERSION}.tar.gz && \
+          tar -xzf apptainer-${VERSION}.tar.gz && \
+          cd apptainer-${VERSION} && \
+          ./mconfig --prefix=$HOME/opt/apptainer --without-suid && \
+          make -C ./builddir && \
+          sudo make -C ./builddir install
+      - name: Set Apptainer/Singularity environment variables
         run: |
           echo $HOME/opt/singularity/bin >> $GITHUB_PATH
-          # Give reproenv the full path to singularity, so it still works with `sudo`.
-          echo REPROENV_SINGULARITY_PROGRAM=$HOME/opt/singularity/bin/singularity >> $GITHUB_ENV
-          echo SINGULARITY_CACHEDIR=/dev/shm/$(whoami)/singularity >> $GITHUB_ENV
+          # Give reproenv the full path to apptainer, so it still works with `sudo`.
+          echo REPROENV_APPTAINER_PROGRAM=$HOME/opt/apptainer/bin/apptainer >> $GITHUB_ENV
+          echo APPTAINER_CACHEDIR=/dev/shm/$(whoami)/singularity >> $GITHUB_ENV
       - uses: actions/checkout@v2
       - name: Set up Python
         uses: actions/setup-python@v2
