--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -1,4 +1,4 @@
-name: CI
+name: bootstrap
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ "*" ]
 
 jobs:
-  run-tests:
+  bootstrap:
     runs-on: ubuntu-22.04
 
     steps:
@@ -25,5 +25,41 @@ jobs:
         run: |
           python .github/workflows/create_workflows.py
           ls -l .github/workflows
+
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          # Optional. Commit message for the created commit.
+          # Defaults to "Apply automatic changes"
+          commit_message: add workflows
+
+          # Optional. Local and remote branch name where commit is going to be pushed
+          #  to. Defaults to the current branch.
+          #  You might need to set `create_branch: true` if the branch does not exist.
+          branch: test_docker_build
+
+          # Optional. Options used by `git-commit`.
+          # See https://git-scm.com/docs/git-commit#_options
+          commit_options: '--no-verify --signoff'
+
+          # Optional commit user and author settings
+          commit_user_name: My GitHub Actions Bot # defaults to "github-actions[bot]"
+          commit_user_email: my-github-actions-bot@example.org # defaults to "41898282+github-actions[bot]@users.noreply.github.com"
+          commit_author: Author <actions@github.com> # defaults to author of the commit that triggered the run
+
+          # Optional. Options used by `git-push`.
+          # See https://git-scm.com/docs/git-push#_options
+          push_options: '--force'
+          
+          # Optional. Disable dirty check and always try to create a commit and push
+          skip_dirty_check: true    
+          
+          # Optional. Skip internal call to `git fetch`
+          skip_fetch: true    
+          
+          # Optional. Skip internal call to `git checkout`
+          skip_checkout: true
+
+          # Optional. Create given branch name in local and remote repository.
+          create_branch: true
 
 
