--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -41,10 +41,9 @@ jobs:
           # See https://git-scm.com/docs/git-commit#_options
           commit_options: '--no-verify --signoff'
 
-          # Optional commit user and author settings
-          commit_user_name: My GitHub Actions Bot # defaults to "github-actions[bot]"
-          commit_user_email: my-github-actions-bot@example.org # defaults to "41898282+github-actions[bot]@users.noreply.github.com"
-          commit_author: Author <actions@github.com> # defaults to author of the commit that triggered the run
+          # https://github.com/actions/checkout#push-a-commit-using-the-built-in-token
+          commit_user_name: github-actions 
+          commit_user_email: github-actions@github.com 
 
           # Optional. Options used by `git-push`.
           # See https://git-scm.com/docs/git-push#_options
