--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.NEURODOCKER_WORFLOW  }}
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -26,12 +28,13 @@ jobs:
           python .github/workflows/create_workflows.py
           ls -l .github/workflows
 
+      # https://github.com/actions/checkout#push-a-commit-using-the-built-in-token
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git checkout -b test_docker_build
           git add .
-          git commit -m "generated"
+          git commit -m "add workflows"
           git push --set-upstream origin test_docker_build         
 
       - uses: stefanzweifel/git-auto-commit-action@v4
