--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -1,10 +1,12 @@
 name: bootstrap
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
-    branches: [ "*" ] 
-  pull_request:
-    branches: [ "*" ]
+    branches: [ "bootstrap" ] 
 
 jobs:
   bootstrap:
@@ -28,14 +30,14 @@ jobs:
           python .github/workflows/create_workflows.py
           ls -l .github/workflows
 
-      # https://github.com/actions/checkout#push-a-commit-using-the-built-in-token
-      - run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git checkout -b test_docker_build
-          git add .
-          git commit -m "add workflows"
-          git push --set-upstream origin test_docker_build         
+      # # https://github.com/actions/checkout#push-a-commit-using-the-built-in-token
+      # - run: |
+      #     git config user.name github-actions
+      #     git config user.email github-actions@github.com
+      #     git checkout -b test_docker_build
+      #     git add .
+      #     git commit -m "add workflows"
+      #     git push --set-upstream origin test_docker_build         
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
