--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -32,6 +32,9 @@ on:
   schedule:
   - cron: 0 0 1,15 * *
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:  
+
 jobs:
   bootstrap:
     runs-on: ubuntu-22.04
