check that files have been formatted with black

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -36,6 +36,8 @@ jobs:
         run: mypy --install-types --non-interactive neurodocker
       - name: Check style
         run: flake8 neurodocker
+      - name: Check black formatting
+        run: black --check neurodocker
       - name: Run python tests
         run: pytest --numprocesses auto
       - name: Get code coverage
