--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,16 +3,22 @@ on:
     branches:
     - master
   workflow_dispatch:
-  
+permissions:
+  contents: write  
 jobs:
   build_docs:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-
-    # Standard usage
-    - uses:  totaldebug/action-sphinx@v2
-      with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          sphinx_src: 'docs'
-          target_branch: 'gh-pages'
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Install neurodocker
+        run: python -m pip install --editable .[docs]
+      - name: build docs
+        run: sphinx-build docs docs-build
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: docs-build # The folder the action should deploy.
