--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -34,7 +34,8 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:  
-
+permissions:
+  contents: write 
 jobs:
   bootstrap:
     runs-on: ubuntu-22.04
